Added 3 recipes and linked from index

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <center>
+        <a href="recipes/tunaAlfredo.html">Tuna Alfredo</a> | 
+        <a href="recipes/meatloaf.html">Meatloaf</a> | 
+        <a href="recipes/bananaBread.html">Banana Bread</a> | 
+    </center>
 </body>
 </html>
