--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <center><h1>Odin Recipes</h1></center>
+    <center><img src="images/hungry.gif" alt="Garfield stuffing face"></center>
     <center>
         <a href="recipes/tunaAlfredo.html">Tuna Alfredo</a> | 
         <a href="recipes/meatloaf.html">Meatloaf</a> | 
