Added relative link back to home page

--- a/recipes/bananaBread.html
+++ b/recipes/bananaBread.html
@@ -31,5 +31,6 @@
         <li>Bake in over for 60 - 65 minutes. Checking periodically.</li>
         <li>Once done, let cool for 10 minutes.</li>
     </ol>
+    <p><strong><a href="/index.html">Home</a></strong></p>
 </body>
 </html>
