--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -29,5 +29,6 @@
         <li>In seperate bowl mix brown sugar, mustard and ketchup. Mix well and pour over meatloaf.</li>
         <li>Bake at 350 degrees for 1 hour.</li>
     </ol>
+    <p><strong><a href="/index.html">Home</a></strong></p>
 </body>
 </html>
