--- a/recipes/tunaAlfredo.html
+++ b/recipes/tunaAlfredo.html
@@ -26,5 +26,6 @@
         <li>Stir in alfredo sauce, lemon juice, capers, lemon zest pepper into a small saucepan.</li>
         <li>Add tuna, cook over medium heat for 5 mins. Serve over pasta.</li>
     </ol>
+    <p><strong><a href="/index.html">Home</a></strong></p>
 </body>
 </html>
